--- a/css/typography.css
+++ b/css/typography.css
@@ -3,17 +3,78 @@ blue: #1146a9
 green: #a8d427
 gray: #3d3d3d
 text color gray: #2c2c2c
-
 */
 
-
 html {
-  font-family: "Rubik", "Arial", sans-serif;
+  font-family: "Rubik", "Open Sans", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 1.618em;
   color: #2c2c2c;
   -webkit-font-smoothing: antialiased;
 }
 
 
-p {
-  font-weight: 100;
+/* MOBILE AND TABLET */
+
+h1, h2, h3, h4, h5, h6, p {
+  text-align: center;
+}
+
+h1, h2, h3 {
+  text-transform: uppercase;
+}
+
+strong {
+  font-weight: 700;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 3rem;
+  margin-top: 5rem;
+}
+
+h1 a {
+  color: #2c2c2c;
+  text-decoration: none;
+}
+
+h1 a:hover {
+  color: #1146a9;
+}
+
+h2 {
+  font-weight: 800;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  margin-top: 3rem;
+}
+
+h3 {
+  font-weight: 800;
+  font-size: 1.5rem;
+  line-height: 2.3rem;
+}
+
+h4 {
+  font-weight: 800;
+  font-size: 1.2rem;
+  line-height: 2rem;
+}
+
+h5 {
+  font-size: .95rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  text-align: left;
+}
+
+h5 a {
+  font-weight: 600;
+  color: white;
+}
+
+h5 a:hover {
+  color: #CAEBED;
 }
