--- a/css/grid.css
+++ b/css/grid.css
@@ -1,45 +1,70 @@
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 *, ::after, ::before {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  /*background-color: #dadada;*/
-  padding-left: 1rem;
-  padding-right: 1rem;
+    max-width: 992px;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-@media (min-width: 576px) { .container { max-width: 540px; } }
-@media (min-width: 768px) { .container { max-width: 720px; } }
-@media (min-width: 992px) { .container { max-width: 960px; } }
-@media (min-width: 1200px) { .container { max-width: 1140px; } }
 
 .container-fluid {
-  max-width: 100%;
-  /*background-color: #cccccc;*/
+    max-width: 100%;
 }
 
-.row {
-  display: flex;
-  display: -webkit-flex;
-  flex-flow: row wrap;
-  -webkit-flex-flow: row wrap;
-  justify-content: flex-start;
-  -webkit-justify-content: flex-start;
-  align-items: flex-start;
-  -webkit-align-items: flex-start;
-  align-content: flex-start;
-  -webkit-align-content: flex-start;
-  margin-left: -1rem;
-  margin-right: -1rem;
+.wrap {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    align-items: flex-start;
+    -webkit-align-items: flex-start;
+    align-content: flex-start;
+    -webkit-align-content: flex-start;
+    margin: auto;
 }
+
+.nowrap {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row nowrap;
+    -webkit-flex-flow: row nowrap;
+    justify-content: space-around;
+    -webkit-justify-content: space-around;
+    align-items: flex-start;
+    -webkit-align-items: flex-start;
+    align-content: flex-start;
+    -webkit-align-content: flex-start;
+    margin: auto;
+
+}
+
+.multiblock {
+    display: flex;
+    display: -webkit-flex;
+    display: block;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.singleblock {
+    display: flex;
+    display: -webkit-flex;
+    display: block;
+    padding: 0;
+    text-align: center;
+}
+
+@media (max-width: 576 px) {}
+@media (min-width: 576 px) {}
+@media (min-width: 850 px) {}
 
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12,
 .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12,
@@ -48,80 +73,8 @@ body {
 .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
   position: relative;
 }
-/*
-.col-xs-12 {
-  flex: 0 0 calc((100% / 12) * 12);
-  -webkit-flex: 0 0 calc((100% / 12) * 12);
-  max-width: calc((100% / 12) * 12);
-}
 
-.col-xs-11 {
-  flex: 0 0 calc((100% / 12) * 11);
-  -webkit-flex: 0 0 calc((100% / 12) * 11);
-  max-width: calc((100% / 12) * 11);
-}
-
-.col-xs-10 {
-  flex: 0 0 calc((100% / 12) * 10);
-  -webkit-flex: 0 0 calc((100% / 12) * 10);
-  max-width: calc((100% / 12) * 10);
-}
-
-.col-xs-9 {
-  flex: 0 0 calc((100% / 12) * 9);
-  -webkit-flex: 0 0 calc((100% / 12) * 9);
-  max-width: calc((100% / 12) * 9);
-}
-
-.col-xs-8 {
-  flex: 0 0 calc((100% / 12) * 8);
-  -webkit-flex: 0 0 calc((100% / 12) * 8);
-  max-width: calc((100% / 12) * 8);
-}
-
-.col-xs-7 {
-  flex: 0 0 calc((100% / 12) * 7);
-  -webkit-flex: 0 0 calc((100% / 12) * 7);
-  max-width: calc((100% / 12) * 7);
-}
-
-.col-xs-6 {
-  flex: 0 0 calc((100% / 12) * 6);
-  -webkit-flex: 0 0 calc((100% / 12) * 6);
-  max-width: calc((100% / 12) * 6);
-}
-
-.col-xs-5 {
-  flex: 0 0 calc((100% / 12) * 5);
-  -webkit-flex: 0 0 calc((100% / 12) * 5);
-  max-width: calc((100% / 12) * 5);
-}
-
-.col-xs-4 {
-  flex: 0 0 calc((100% / 12) * 4);
-  -webkit-flex: 0 0 calc((100% / 12) * 4);
-  max-width: calc((100% / 12) * 4);
-}
-
-.col-xs-3 {
-  flex: 0 0 calc((100% / 12) * 3);
-  -webkit-flex: 0 0 calc((100% / 12) * 3);
-  max-width: calc((100% / 12) * 3);
-}
-
-.col-xs-2 {
-  flex: 0 0 calc((100% / 12) * 2);
-  -webkit-flex: 0 0 calc((100% / 12) * 2);
-  max-width: calc((100% / 12) * 2);
-}
-
-.col-xs-1 {
-  flex: 0 0 calc((100% / 12) * 1);
-  -webkit-flex: 0 0 calc((100% / 12) * 1);
-  max-width: calc((100% / 12) * 1);
-}*/
-
-@media (max-width: 768px){
+@media (max-width: 576px){
   .col-sm-12 {
     flex: 0 0 calc((100% / 12) * 12);
     -webkit-flex: 0 0 calc((100% / 12) * 12);
@@ -194,7 +147,8 @@ body {
     max-width: calc((100% / 12) * 1);
   }
 }
-@media (min-width: 768px) {
+
+@media (min-width: 576px) {
   .col-md-12 {
     flex: 0 0 calc((100% / 12) * 12);
     -webkit-flex: 0 0 calc((100% / 12) * 12);
@@ -267,7 +221,8 @@ body {
     max-width: calc((100% / 12) * 1);
   }
 }
-@media (min-width: 992px) {
+
+@media (min-width: 850px) {
   .col-lg-12 {
     flex: 0 0 calc((100% / 12) * 12);
     -webkit-flex: 0 0 calc((100% / 12) * 12);
@@ -335,79 +290,6 @@ body {
   }
 
   .col-lg-1 {
-    flex: 0 0 calc((100% / 12) * 1);
-    -webkit-flex: 0 0 calc((100% / 12) * 1);
-    max-width: calc((100% / 12) * 1);
-  }
-}
-@media (min-width: 1200px) {
-  .col-xl-12 {
-    flex: 0 0 calc((100% / 12) * 12);
-    -webkit-flex: 0 0 calc((100% / 12) * 12);
-    max-width: calc((100% / 12) * 12);
-  }
-
-  .col-xl-11 {
-    flex: 0 0 calc((100% / 12) * 11);
-    -webkit-flex: 0 0 calc((100% / 12) * 11);
-    max-width: calc((100% / 12) * 11);
-  }
-
-  .col-xl-10 {
-    flex: 0 0 calc((100% / 12) * 10);
-    -webkit-flex: 0 0 calc((100% / 12) * 10);
-    max-width: calc((100% / 12) * 10);
-  }
-
-  .col-xl-9 {
-    flex: 0 0 calc((100% / 12) * 9);
-    -webkit-flex: 0 0 calc((100% / 12) * 9);
-    max-width: calc((100% / 12) * 9);
-  }
-
-  .col-xl-8 {
-    flex: 0 0 calc((100% / 12) * 8);
-    -webkit-flex: 0 0 calc((100% / 12) * 8);
-    max-width: calc((100% / 12) * 8);
-  }
-
-  .col-xl-7 {
-    flex: 0 0 calc((100% / 12) * 7);
-    -webkit-flex: 0 0 calc((100% / 12) * 7);
-    max-width: calc((100% / 12) * 7);
-  }
-
-  .col-xl-6 {
-    flex: 0 0 calc((100% / 12) * 6);
-    -webkit-flex: 0 0 calc((100% / 12) * 6);
-    max-width: calc((100% / 12) * 6);
-  }
-
-  .col-xl-5 {
-    flex: 0 0 calc((100% / 12) * 5);
-    -webkit-flex: 0 0 calc((100% / 12) * 5);
-    max-width: calc((100% / 12) * 5);
-  }
-
-  .col-xl-4 {
-    flex: 0 0 calc((100% / 12) * 4);
-    -webkit-flex: 0 0 calc((100% / 12) * 4);
-    max-width: calc((100% / 12) * 4);
-  }
-
-  .col-xl-3 {
-    flex: 0 0 calc((100% / 12) * 3);
-    -webkit-flex: 0 0 calc((100% / 12) * 3);
-    max-width: calc((100% / 12) * 3);
-  }
-
-  .col-xl-2 {
-    flex: 0 0 calc((100% / 12) * 2);
-    -webkit-flex: 0 0 calc((100% / 12) * 2);
-    max-width: calc((100% / 12) * 2);
-  }
-
-  .col-xl-1 {
     flex: 0 0 calc((100% / 12) * 1);
     -webkit-flex: 0 0 calc((100% / 12) * 1);
     max-width: calc((100% / 12) * 1);
