--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
 @import url("grid.css");
 @import url("typography.css");
+@import url("navigation.css");
+@import url("index.css");
+
+/* GLOBAL COLORS
+blue: #1146a9
+green: #a8d427
+gray: #3d3d3d
+text color gray: #2c2c2c
+*/
