--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,26 @@
     background: rgba(255, 255, 255, 0.3);
 }
 
+.multiblock {
+  text-align: center;
+}
+
+.owner-photo {
+  width: 65%;
+  padding-top: 20px;
+  border-radius: 50%;
+}
+
+.aboutp {
+  text-align: center;
+}
+
+.aboutp p{
+  width: 70%;
+  padding-top: 20px;
+  padding-left: 300px;
+}
+
 .button {
     background: rgba(21, 78, 167, 0.8);
     border: none;
