--- a/css/grid.css
+++ b/css/grid.css
@@ -11,6 +11,29 @@ body {
     max-width: 992px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 20px;
+}
+
+.containerwhite {
+    max-width: 992px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+.containergray {
+    max-width: 992px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #F8F8F8;
 }
 
 .container-fluid {
@@ -31,6 +54,16 @@ body {
     margin: auto;
 }
 
+.deliverywrap {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    align-items: center;
+    -webkit-align-items: center;
+    margin: auto;
+}
+
 .nowrap {
     display: flex;
     display: -webkit-flex;
@@ -43,7 +76,6 @@ body {
     align-content: flex-start;
     -webkit-align-content: flex-start;
     margin: auto;
-
 }
 
 .multiblock {
@@ -54,6 +86,45 @@ body {
     padding-right: 2rem;
 }
 
+.maxthreeblocks {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    align-items: center;
+    -webkit-align-items: center;
+    width: 30%;
+    margin-top: 0;
+}
+
+.menumaxthreeblocks {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    align-items: center;
+    -webkit-align-items: center;
+    width: 29%;
+    margin-top: 0;
+    margin-bottom: 15px;
+    border: 2px solid #dddddd;
+    border-radius: 20px;
+    padding-top: 20px;
+    padding-left: 3px;
+    padding-right: 3px;
+    background-color: white;
+    text-align: center;
+}
+
+.linkbox {
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:28;
+    left: 0;
+    z-index: 1;
+}
+
 .singleblock {
     display: flex;
     display: -webkit-flex;
@@ -61,6 +132,39 @@ body {
     padding: 0;
     text-align: center;
 }
+
+.description {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.optionblocks {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+    -webkit-justify-content: space-around;
+    align-items: flex-start;
+    -webkit-align-itmes: flex-start;
+    align-content: flex-start;
+    -webkit-align-content: flex-start;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.foodoptions {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    align-items: flex-start;
+    -webkit-align-items: flex-start;
+    width: 30%;
+    margin-top: 0;
+    padding-left: 20px;
+}
+
 
 @media (max-width: 576 px) {}
 @media (min-width: 576 px) {}
