--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 @import url("typography.css");
 @import url("navigation.css");
 @import url("index.css");
+@import url("news.css");
 
 /* GLOBAL COLORS
 blue: #1146a9
