--- a/css/typography.css
+++ b/css/typography.css
@@ -27,15 +27,25 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
     text-decoration: none;
 }
 
-h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
-    color: #1146a9;
+p a {
+    font-weight: 500;
+}
+
+p a:hover, h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
+    color: #a8d427;
+}
+
+strong {
+    font-weight: 500;
+    padding-bottom: 15px;
 }
 
 /* - - - - - - MOBILE - - - - - - - */
     p {
-        font-size: 1rem;
+        font-size: .9rem;
         line-height: 1.5rem;
         font-weight: 100;
+        text-align: center;
     }
 
     h1 {
@@ -63,14 +73,19 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
         color: #ffffff;
         font-weight: 700;
         font-size: 1.5rem;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 0;
     }
 
     h4 {
         text-align: center;
         color: #2c2c2c;
         font-weight: 600;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         line-height: 2rem;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     h5 {
