--- a/css/typography.css
+++ b/css/typography.css
@@ -47,7 +47,7 @@ strong {
         font-weight: 100;
         text-align: center;
     }
-
+    
     h1 {
         text-transform: uppercase;
         text-align: center;
@@ -57,7 +57,7 @@ strong {
         line-height: 3rem;
         margin-top: 3rem;
     }
-
+    
     h2 {
         text-transform: uppercase;
         text-align: center;
@@ -67,7 +67,7 @@ strong {
         line-height: 2.5rem;
         margin-top: 3rem;
     }
-
+    
     h3 {
         text-transform: uppercase;
         color: #ffffff;
@@ -77,7 +77,7 @@ strong {
         margin-top: 20px;
         margin-bottom: 0;
     }
-
+    
     h4 {
         text-align: center;
         color: #2c2c2c;
@@ -87,7 +87,7 @@ strong {
         margin-top: 0;
         margin-bottom: 0;
     }
-
+    
     h5 {
         text-align: center;
         color: #2c2c2c;
@@ -95,7 +95,16 @@ strong {
         font-size: .95rem;
         line-height: 1.8rem;
     }
-
+    
+    h6 {
+        text-align: left;
+        color: #2c2c2c;
+        font-weight: 200;
+        font-size: .95rem;
+        line-height: 1.8rem;
+        margin-bottom: .2rem;
+    }
+    
     footer {
         font-size: .8rem;
         color: #2c2c2c;
@@ -106,7 +115,7 @@ strong {
 @media (min-width: 576 px) {
     h1 {
         font-size: 7rem;
-    }
+    } 
 }
 
 
